# zero-to-production-in-rust

./: Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20240621152910_make_status_not_null_in_subscriptions.sql  20241103150230_seed_user.sql  20250201152931_create_idempotency_table.sql  20250218152402_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  issue.rs  mod.rs  password.rs
src/routes/admin/issue/: get.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
